--- a/Herdinator_mobile/res/layout/settings_layout.xml
+++ b/Herdinator_mobile/res/layout/settings_layout.xml
@@ -56,7 +56,8 @@
                 android:id="@+id/marker_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10" />
+                android:ems="10"
+                android:inputType="number" />
 
         </LinearLayout>
 
@@ -79,6 +80,11 @@
                 android:visibility="invisible" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/error_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
