--- a/Herdinator_mobile/res/layout/selected_object_activity.xml
+++ b/Herdinator_mobile/res/layout/selected_object_activity.xml
@@ -4,30 +4,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="bottom|center_horizontal"
-        android:orientation="vertical" >
-
-        <ImageView
-            android:id="@+id/selected_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-
-        <Button
-            android:id="@+id/return_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Return" />
-
-    </LinearLayout>
-
     <View
-        android:id="@+id/coloroverlay_2"
+        android:id="@+id/coloroverlay"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
+
+    <ImageView
+        android:id="@+id/selected_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
 </FrameLayout>
 
